# than_pdf_engine

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/than_pdf_engine/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  my_page.dart  pdf_list_view.dart  pdf_page_item.dart  rbga_image_viewer.dart  reader_v2.dart
example/lib/reader_v4/: pdf_page_item.dart  pdf_reader.dart  pdf_reader_base.dart
example/lib/reader_v4/core/: pdf_layout_engine.dart  pdf_reader_events.dart  pdf_reader_state.dart  pdf_state_controller.dart
example/lib/reader_v4/logic_mixins/: viewer_scroll_animation_mixin.dart
example/lib/v3/: t_custom_pdf_viewer.dart  t_pdf_controller_v3.dart  t_pdf_render_v3_base.dart
example/lib/v3/default_ui/: custom_widgets.dart  default_pdf_ui_util.dart
example/lib/v3/events/: pdf_reader_event.dart  user_event.dart
example/lib/v3/logic_mixins/: scroll_keyboard_handler_mixin.dart  scrollbar_handler.dart  touch_zoom_handler_mixin.dart  viewer_cache_mixin.dart  viewer_layout_mixin.dart  viewer_page_build_handler.dart  viewer_scroll_animation_mixin.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: than_pdf_engine.dart  than_pdf_engine_bindings_generated.dart
lib/core/: pdf_background_worker.dart  pdf_core.dart  pdf_page.dart  types.dart
src/: CMakeLists.txt  build_all.sh  build_android.sh  main.cpp
src/ffi/: page_core_wrapper.cpp  pdf_page_wrapper.cpp  pdf_util_wrapper.cpp  than_pdf_engine.cpp  than_pdf_engine.h
src/pdf/: pdf_core.cpp  pdf_core.hpp  pdf_page.cpp  pdf_page.hpp  stbi_impl.cpp
test/: main.dart
